align full img fix

--- a/source/assets/stylesheets/_wordcamp.lodz.scss
+++ b/source/assets/stylesheets/_wordcamp.lodz.scss
@@ -308,6 +308,7 @@
 
             img {
                 max-width: none;
+                width: auto;
             }
     
         }
